<?xml version="1.0"?>
<package format="2">
  <name>yolov9_bringup</name>
  <version>0.0.0</version>
  <description>YOLOv9 for ROS 1</description>
  <maintainer email="fmasaki2020@gmail.com">Masaki Fujiwara</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>yolov9_ros</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
